# find-your-twin

./: .dockerignore  .env  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker_start.sh  faiss.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docker.txt
.github/workflows/: continuous-integration.yml  deploy-database.yml  deploy-inference.yml  deploy-to-hf.yml
app/: main.py  run.py  search_service.py  supervisord.conf
configs/: main.yaml
docs/: index.html
docs/static/: script.js  style.css
embeddings_store/: emb_metadata.parquet  faiss_index.faiss  metadata.json
notebooks/: face_detector.ipynb  google_drive.ipynb  populate_faiss.ipynb  population_script.ipynb  read_data.ipynb  removal.ipynb  search_faiss.ipynb
scripts/: clear_database.py  pipeline_upload.py  reset_database.py  resync_database.py  setup_database.py  upload_database.py
services/database/: Dockerfile  database_main.py  main.py  requirements.txt
services/inference/: Dockerfile  main.py  requirements.txt
src/: config.py  credentials.py  data.py  delete.py  embeddings.py  embeddings_database.py  face_detection.py  file.py  google_drive.py  image.py  logging_config.py  model.py  path.py  search_engine.py  utils.py  validation.py
src/find_your_twin.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
tests/: test_config.py  test_credentials.py  test_embeddings.py  test_embeddings_database.py  test_face_detection.py  test_file.py  test_google_drive.py  test_image.py  test_model.py  test_utils.py  test_validation.py
web/: index.html  main.py
(+18 files in other folders)
